#307 add jdk option to run serialization test under jdk17